// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prop desc-text-align left 1`] = `
"<view class=\\"nut-cell\\" style=\\"border-radius: px;\\">
  <!--v-if-->
  <!--v-if-->
  <view class=\\"nut-cell__value nut-cell__value--alone\\" style=\\"text-align: left;\\">张三</view>
  <!--v-if-->
</view>"
`;

exports[`prop isLink  1`] = `
"<view class=\\"nut-cell nut-cell--clickable\\" style=\\"border-radius: px;\\">
  <!--v-if-->
  <!--v-if-->
  <!--v-if--><i class=\\"nutui-iconfont nut-icon nut-icon-right nut-cell__link\\" src=\\"\\"></i>
</view>"
`;

exports[`prop title desc subtitle 1`] = `
"<view class=\\"nut-cell\\" style=\\"border-radius: px;\\">
  <!--v-if-->
  <view class=\\"nut-cell__title\\">
    <view class=\\"title\\">标题1</view>
    <view class=\\"nut-cell__title-desc\\">副标题1</view>
  </view>
  <view class=\\"nut-cell__value\\" style=\\"text-align: right;\\">描述1</view>
  <!--v-if-->
</view>"
`;

exports[`slot default test 1`] = `"<view class=\\"nut-cell\\" style=\\"border-radius: px;\\">Custom Content</view>"`;

exports[`slot link、icon test 1`] = `
"<view class=\\"nut-cell\\" style=\\"border-radius: px;\\">
  <view class=\\"nut-cell__icon\\">Custom Icon</view>
  <view class=\\"nut-cell__title\\">
    <view class=\\"title\\">标题1</view>
    <view class=\\"nut-cell__title-desc\\">副标题1</view>
  </view>
  <view class=\\"nut-cell__value\\" style=\\"text-align: right;\\">描述1</view>Custom Link
</view>"
`;
